# RAG-LLMOPS-Pipeline

./: .gitignore  Dockerfile  main.py  pyproject.toml  requirements.txt  test.py
.github/workflows/: aws.yml  ci.yml  task-definition.json
faiss_index/session_20260515_24ab/: index.pkl  ingested_meta.json
faiss_index/session_20260515_4737/: index.pkl  ingested_meta.json
faiss_index/session_20260517_359a/: index.faiss  index.pkl  ingested_meta.json
faiss_index/session_20260517_bed4/: index.pkl  ingested_meta.json
multi_doc_chat/config/: config.yaml
multi_doc_chat/exceptions/: custom_exceptions.py
multi_doc_chat/logging/: custom_logger.py
multi_doc_chat/prompts/: prompts.py
multi_doc_chat/response_models/: models.py
multi_doc_chat/src/document_ingestion/: document_ingestion.py
multi_doc_chat/src/document_pipeline/: document_retriever.py
multi_doc_chat/utils/: config_loader.py  document_loader.py  model_loader.py  uploaded_file_saving.py
templates/: index.html
test/: conftest.py
test/integration/: test_chat_route.py  test_upload_route.py
test/unit/: test_document_ingestion.py  test_document_retriever.py
