[project]
name = "rag-llmops-pipeline"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.2",
    "fastapi>=0.135.3",
    "groq>=0.37.1",
    "huggingface-hub>=1.10.2",
    "jinja2>=3.1.6",
    "langchain>=1.2.15",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.30",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.1",
    "pypdf>=6.11.0",
    "python-multipart>=0.0.27",
    "sentence-transformers>=5.4.1",
    "structlog>=25.5.0",
    "uvicorn>=0.46.0",
]
